WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164388
REGRESSION: inspector/sampling-profiler/* LayoutTests are flaky timeouts
https://bugs.webkit.org/show_bug.cgi?id=164388
Summary
REGRESSION: inspector/sampling-profiler/* LayoutTests are flaky timeouts
Ryan Haddad
Reported
2016-11-03 16:34:10 PDT
inspector/sampling-profiler/call-frame-with-dom-functions.html and inspector/sampling-profiler/expression-location-info.html are flaky timeouts
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=inspector%2Fsampling-profiler%2Fcall-frame-with-dom-functions.html
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=inspector%2Fsampling-profiler%2Fexpression-location-info.html
Attachments
Archive of layout-test-results from webkit-cq-01
(946.83 KB, application/zip)
2016-11-09 10:56 PST
,
WebKit Commit Bot
no flags
Details
[PATCH] Proposed Fix
(3.32 KB, patch)
2016-11-30 13:41 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(4.06 KB, patch)
2016-11-30 13:42 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2016-11-03 17:00:43 PDT
Marked tests as flaky in
http://trac.webkit.org/projects/webkit/changeset/208358
Radar WebKit Bug Importer
Comment 2
2016-11-03 17:01:21 PDT
<
rdar://problem/29101555
>
Ryan Haddad
Comment 3
2016-11-03 17:01:38 PDT
Could this have anything to do with
http://trac.webkit.org/changeset/208309
?
Blaze Burg
Comment 4
2016-11-03 20:35:21 PDT
Seems very unlikely.
Alexey Proskuryakov
Comment 5
2016-11-05 09:59:52 PDT
***
Bug 164399
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 6
2016-11-09 10:56:42 PST
The commit-queue just saw inspector/sampling-profiler/call-frame-with-dom-functions.html flake (test timed out) while processing
attachment 294234
[details]
on
bug 164459
. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.10.5
WebKit Commit Bot
Comment 7
2016-11-09 10:56:43 PST
Created
attachment 294239
[details]
Archive of layout-test-results from webkit-cq-01
Ryan Haddad
Comment 8
2016-11-10 12:04:50 PST
It looks like many/all of the inspector/sampling-profiler tests are flaky timeouts now:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=inspector%2Fsampling-profiler%2F
Joseph Pecoraro
Comment 9
2016-11-30 13:41:30 PST
Created
attachment 295756
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 10
2016-11-30 13:42:18 PST
Created
attachment 295757
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 11
2016-11-30 14:21:37 PST
Comment on
attachment 295757
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 295757 Committed
r209154
: <
http://trac.webkit.org/changeset/209154
>
WebKit Commit Bot
Comment 12
2016-11-30 14:21:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug